# LDTObserverTools

./: .buildinfo  .gitignore  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  celestial_time.py  deveny_collfocus.html  deveny_etc.html  deveny_grangle.html  deveny_grangle.py  deveny_ql.html  dfocus.html  dfocus.py  environment.yml  fix_ldt_header.html  genindex.html  grangle_gui.py  index.html  input_validator.html  lmi_etc.html  lmi_ql.html  neocp_ephem.html  objects.inv  observer_target.html  py-modindex.html  rimas_etc.html  rimas_image_ql.html  rimas_spec_ql.html  scrub_deveny_pickup.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  utils.py
.github/: dependabot.yml  release.yml
.github/workflows/: admin-orchestrator.yml  ci_tests.yml  documentation.yaml  documentation.yml  update-changelog.yml
_modules/: index.html  obstools.html
_modules/obstools/: broker_listener.html  celestial_time.html  deveny_collfocus.html  deveny_grangle.html  dfocus.html  fix_ldt_header.html  lmi_etc.html  neocp_ephem.html  scrub_deveny_pickup.html  utils.html
_modules/obstools/tests/: test_celestial_time.html  test_deveny_grangle.html  test_dfocus.html  test_lmi_etc.html  test_utils.html
_sources/: deveny_collfocus.rst.txt  deveny_etc.rst.txt  deveny_grangle.rst.txt  deveny_ql.rst.txt  dfocus.rst.txt  fix_ldt_header.rst.txt  index.rst.txt  input_validator.rst.txt  lmi_etc.rst.txt  neocp_ephem.rst.txt  rimas_image_ql.rst.txt  rimas_spec_ql.rst.txt  scrub_deveny_pickup.rst.txt
_sources/api/: modules.rst.txt  obstools.broker_listener.rst.txt  obstools.celestial_time.rst.txt  obstools.deveny_collfocus.rst.txt  obstools.deveny_grangle.rst.txt  obstools.dfocus.rst.txt  obstools.fix_ldt_header.rst.txt  obstools.lmi_etc.rst.txt  obstools.neocp_ephem.rst.txt  obstools.rst.txt  obstools.scrub_deveny_pickup.rst.txt  obstools.tests.rst.txt  obstools.tests.test_celestial_time.rst.txt  obstools.tests.test_deveny_grangle.rst.txt  obstools.tests.test_dfocus.rst.txt  obstools.tests.test_lmi_etc.rst.txt  obstools.tests.test_utils.rst.txt  obstools.tests.tstutlis.rst.txt  obstools.utils.rst.txt
_sources/help/: deveny_collfocus.rst.txt  deveny_grangle.rst.txt  fix_ldt_header.rst.txt  lmi_etc.rst.txt  neocp_ephem.rst.txt  scrub_deveny_pickup.rst.txt
_sources/include/: dependencies_table.rst.txt  links.rst.txt
api/: modules.html  obstools.broker_listener.html  obstools.celestial_time.html  obstools.deveny_collfocus.html  obstools.deveny_grangle.html  obstools.dfocus.html  obstools.fix_ldt_header.html  obstools.html  obstools.lmi_etc.html  obstools.neocp_ephem.html  obstools.scrub_deveny_pickup.html  obstools.tests.html  obstools.tests.test_celestial_time.html  obstools.tests.test_deveny_grangle.html  obstools.tests.test_dfocus.html  obstools.tests.test_lmi_etc.html  obstools.tests.test_utils.html  obstools.tests.tstutlis.html  obstools.utils.html
deveny_idl/dfocus/: dfitcurves.pro  dfitlines.pro  dflines.pro  version.txt
deveny_idl/dfocus/archive/: dfocus.pro.18nov16  dfocus.pro.19oct16  dfocus.v0.pro
deveny_idl/util/: deveny_amag.pro  dvtrim.pro  modd.pro  plot_lois_temp.pro  setplot.pro
doc/: Makefile  conf.py  deveny_collfocus.rst  deveny_grangle.rst  dfocus.rst  ephem_generator.rst  fix_ldt_header.rst  index.rst  input_validator.rst  lmi_etc.rst  lmi_ql.rst  neocp_ephem.rst  observer_target.rst  rimas_etc.rst  scrub_deveny_pickup.rst
doc/api/: obstools.algorithms.rst  obstools.broker_listener.rst  obstools.celestial_time.rst  obstools.deveny_collfocus.rst  obstools.deveny_etc.rst  obstools.deveny_grangle.rst  obstools.dfocus.rst  obstools.ephem_generator.rst  obstools.etc_calc.rst  obstools.fits_utils.rst  obstools.fix_ldt_header.rst  obstools.lmi_etc.rst  obstools.neocp_ephem.rst  obstools.plotting_functions.rst  obstools.rst  obstools.scrub_deveny_pickup.rst  obstools.tests.rst  obstools.tests.test_algorithms.rst  obstools.tests.test_celestial_time.rst  obstools.tests.test_deveny_grangle.rst  obstools.tests.test_dfocus.rst  obstools.tests.test_lmi_etc.rst  obstools.tests.test_utils.rst  obstools.tests.tstutlis.rst  obstools.utils.rst
doc/help/: deveny_collfocus.rst  deveny_grangle.rst  dfocus.rst  ephem_generator.rst  fix_ldt_header.rst  lmi_etc.rst  neocp_ephem.rst  scrub_deveny_pickup.rst
doc/include/: dependencies_table.rst
doc/scripts/: build_dependency_rst.py  write_script_help.py
help/: deveny_collfocus.html  deveny_grangle.html  dfocus.html  fix_ldt_header.html  lmi_etc.html  neocp_ephem.html  scrub_deveny_pickup.html
idl_version/: avg.pro  com1d.pro  deg.pro  dextract.pro  quad.pro  rad.pro  readstr1.pro  rot1d.pro
include/: dependencies_table.html  links.html
obstools/: ETCDataWindow.py  ETCDataWindow.ui  ETCMainWindow.py  ETCMainWindow.ui  ETCWindow.py  ETCWindow.ui  Makefile  __init__.py  algorithms.py  broker_listener.py  celestial_time.py  collimator_calculator.py  deveny_collfocus.py  deveny_etc.py  deveny_grangle.py  dfocus.py  ephem_generator.py  etc_calc.py  fits_utils.py  fix_ldt_header.py  lmi_etc.py  neocp_ephem.py  plotting_functions.py  rimas_slitoffset.py  scrub_deveny_pickup.py  target_tools.py  utils.py
obstools/UI/: ETCDataWindow.py  ETCDataWindow.ui  ETCMainWindow.py  ETCMainWindow.ui  EphemMainWindow.py  EphemMainWindow.ui  Makefile  RIMAS2SlitMainWindow.py  RIMAS2SlitMainWindow.ui
obstools/config/: README
obstools/data/: etc_filter_info.ecsv  g2v.tls  g2v.votable  g2v_votable.xml
obstools/tests/: test_algorithms.py  test_celestial_time.py  test_deveny_grangle.py  test_dfocus.py  test_lmi_etc.py  test_utils.py  tstutlis.py
obstools/tests/files/deveny/: 20250203.0021.fits  20250203.0022.fits  20250203.0023.fits  20250203.0024.fits  20250203.0025.fits  (+4 more)
old_versions/: etc_calc.php  old__init.py
old_versions/deveny_idl/: slitview_amqerror.txt
old_versions/deveny_idl/dfocus/: dfitcurves.pro  dfocus.pro  dfocus_comp.bat  dplotfocus.pro  flogparse.pro
old_versions/deveny_idl/util/: com2d.pro  deveny_grangle.pro  dspecfit.pro  grangle_eqn.pro  histo.pro  resol.plot  specavg.pro
testing/: comparison.txt
(+4 files in other folders)
