[metadata]
name = obstools
description = Collection of Observer Tools for the Lowell Discovery Telescope
long_description = file: README.md
long_description_content_type = text/markdown
author = Timothy P. Ellsworth Bowers
author_email = tbowers@lowell.edu
license = MPL-2.0
url = https://github.com/LowellObservatory/LDTObserverTools
edit_on_github = False
github_project = LowellObservatory/LDTObserverTools
keywords = obstools
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
use_2to3=False
packages = find:
python_requires = >=3.11,<3.14
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    setuptools
    setuptools_scm
    astropy>=6.0
    darkdetect
    ccdproc
    matplotlib
    numpy>2.0
    scipy
    PySimpleGUI-4-foss
    pyqt6
    requests
    tqdm

[options.extras_require]
docs =
    sphinx>=1.6
    sphinx-automodapi
    sphinx-subfigure
    sphinx_rtd_theme

broker =
    pyyaml
    stomp.py
    xmltodict

pypeit = 
    pypeit[specutils]>=1.15.0

test =
    pytest>=7.0.0
    pytest-astropy
    tox

dev =
    sphinx>=1.6
    sphinx-automodapi
    sphinx-subfigure
    sphinx_rtd_theme
    pylint
    black
    pypeit[specutils]>=1.15.0
    pyyaml
    stomp.py
    xmltodict
    pytest>=7.0.0
    pytest-astropy
    tox

[options.entry_points]
console_scripts =
    deveny_grangle = obstools.deveny_grangle:DevenyGrangle.entry_point
    deveny_collfocus = obstools.deveny_collfocus:DevenyCollfocus.entry_point
    dfocus = obstools.dfocus:DFocus.entry_point
    fix_ldt_header = obstools.fix_ldt_header:FixLdtHeader.entry_point
    lmi_etc = obstools.lmi_etc:LmiEtc.entry_point
    neocp_ephem = obstools.neocp_ephem:NeocpEphem.entry_point
    scrub_deveny_pickup = obstools.scrub_deveny_pickup:ScrubDevenyPickup.entry_point

[tool:pytest]
testpaths = "obstools/tests"
